[package]
name = "roogle"
version = "0.1.0"
authors = ["arl5705 <arl5705@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.1"
url = "2.1.1"

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]