[package]
name = "wiki"
version = "0.1.0"
authors = ["arl5705 <arl5705@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
serde_json = "1.0.47"
html2text = "0.1.10"

[dependencies.reqwest]
version = "0.10.1"
features = ["blocking", "json"]

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]